# biodt-fair

./: .gitignore  AUTHORS  CITATION.cff  README.md  codemeta.json  dataset_ro-crate.ipynb  fdo_definitions.py  fdo_examples_basic.ipynb  pyproject.toml  ro-crate_model_template.json
.github/workflows/: jekyll-gh-pages.yml
T5.3/: README.md  assessment.jsonld
beehave/: beehave_ro-crate.json
data/: dissco_fdo_type.json
docs/: Gemfile  _config.yml  about.md  index.md  metadata_profiles.md
docs/_data/: navigation.yml
docs/_includes/: header.html
docs/_layouts/: default.html
docs/metadata_profiles/: dataset.md  kernel.md  mapping_set.md  model.md  workflow.md
examples/: dataset_ro-crate.ipynb  fdo_definitions.py  fdo_examples_basic.ipynb
examples/leipzig_workshop/: leipzig-ro-crate-finished.json  leipzig-ro-crate-template.json  leipzig_metadata_notebook.ipynb
fdo_profiles/: fdo_kernel_profile.json  kernel_example_ro-crate.json  kernel_template_ro-crate.json  ro-crate_model_template.json
fdo_profiles/datasets/: dataset_profile_crate.json  dataset_template_ro-crate.json
fdo_profiles/mapping-sets/: mapping-set_ro-crate_example.json  mapping-set_ro-crate_template.json
fdo_profiles/mappings/: mapping_profile_crate.json
pdt_beehave/: beehave_ro-crate.json
pdt_ces/: ces_biodiversity_model_ro-crate.json
pdt_cwr/: modgp-ro-crate-metadata.json
pdt_grassland/: grassland_example_ro-crate.json  rocrates_from_b2share.py
pdt_ias/: invasive-alien-species_dataset_example.json  process_run_ias.py  workflow_run_ias.py
pdt_rtbm/: rtbm_model_ro-crate.json
(+56 files in other folders)
